--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -1,4 +1,4 @@
-<div class="">
+<section class="">
   <nav class="flex items-center justify-between">
     <div class="flex items-center">
       <svg
@@ -45,4 +45,4 @@
       </a>
     </div>
   </nav>
-</div>
+</section>
