--- a/src/app/features/home/components/circle-frame/circle-frame.html
+++ b/src/app/features/home/components/circle-frame/circle-frame.html
@@ -1,6 +1,46 @@
 <div
-  class="rounded-full bg-gray-800 hover:bg-gray-700 transition-colors duration-200 shadow-md hover:shadow-lg w-26 h-26 flex flex-col items-center justify-center p-4 cursor-pointer"
+  class="relative h-full overflow-hidden flex flex-col backdrop-blur-sm rounded-lg bg-purple-600/10 hover:bg-gray-700 transition-colors duration-200 shadow-sm hover:shadow-md p-6 cursor-pointer"
 >
-  <img [src]="icon" class="w-13 h-13 object-contain" alt="icon" />
-  <span class="text-white text-sm font-bold mt-1 text-center">{{ title }}</span>
+  <!-- glow background -->
+  <div class="absolute -inset-20 opacity-60 pointer-events-none z-0">
+    <div class="absolute inset-0 bg-purple-500/30 rounded-full blur-3xl"></div>
+    <div
+      class="absolute top-0 left-1/4 w-1/2 h-1/2 bg-indigo-600/20 rounded-full blur-2xl"
+    ></div>
+  </div>
+
+  <!-- white glows -->
+  <div
+    class="absolute top-0 left-0 w-20 h-20 bg-white rounded-full opacity-10 blur-lg pointer-events-none z-0"
+  ></div>
+  <div
+    class="absolute bottom-1/4 right-10 w-16 h-16 bg-white rounded-full opacity-5 blur-md pointer-events-none z-0"
+  ></div>
+
+  <!-- content -->
+  <div class="relative">
+    <div class="flex flex-col justify-between">
+      <div class="space-y-2">
+        <img [src]="icon" class="w-13 h-13 object-contain" alt="icon" />
+        <span class="text-white text-lg font-bold mt-1">{{ title }}</span>
+        <p class="text-gray-400 text-sm mt-1">{{ description }}</p>
+      </div>
+
+      <div class="flex items-center justify-between mt-8">
+        <span class="text-purple-500">25 snippets</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-5 w-5 text-white"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+    </div>
+  </div>
 </div>
