--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,11 +1,22 @@
 <section class="m-6">
   <app-header />
-
-  <div class="flex items-center gap-12 justify-center mt-4">
+  <div class="flex flex-col items-center justify-center min-h-[80vh]">
+    <app-hero></app-hero>
+  </div>
+  <!-- glow -->
+  <div class="relative z-0">
+    <div
+      class="pointer-events-none absolute -top-10 left-1/2 transform -translate-x-1/2 w-[80%] h-48 bg-gradient-to-r from-purple-500/30 via-purple-400/20 to-purple-500/30 blur-3xl rounded-full opacity-70 z-10"
+    ></div>
+  </div>
+  <div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-stretch mt-8 z-10"
+  >
     <ng-container *ngFor="let item of frameworkList">
       <app-circle-frame
         [title]="item.name"
         [icon]="item.logo"
+        [description]="item.description"
       ></app-circle-frame>
     </ng-container>
   </div>
