--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -2,7 +2,7 @@
   <nav class="flex items-center justify-between">
     <div class="flex items-center">
       <svg
-        class="w-6 h-6 text-green-600"
+        class="w-6 h-6 text-purple-600"
         viewBox="0 0 24 24"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
@@ -32,7 +32,7 @@
       </a>
       <a
         href="Create Snippet"
-        class="flex items-center justify-center w-10 h-10 rounded-full bg-gray-800 hover:bg-gray-700 transition-colors"
+        class="flex items-center justify-center w-10 h-10 rounded-full bg-purple-600 hover:bg-purple-700 transition-colors"
       >
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
           <path
