--- a/src/app/features/home/components/circle-frame/circle-frame.html
+++ b/src/app/features/home/components/circle-frame/circle-frame.html
@@ -21,7 +21,11 @@
   <div class="relative">
     <div class="flex flex-col justify-between">
       <div class="space-y-2">
-        <img [src]="icon" class="w-13 h-13 object-contain" alt="icon" />
+        <img
+          [src]="icon"
+          class="w-13 h-13 object-contain"
+          alt="icon"
+        />
         <span class="text-white text-lg font-bold mt-1">{{ title }}</span>
         <p class="text-gray-400 text-sm mt-1">{{ description }}</p>
       </div>
