--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,23 +1,42 @@
 <section class="m-6">
   <app-header />
-  <div class="flex flex-col items-center justify-center min-h-[80vh]">
+  <div class="flex flex-col items-center justify-center min-h-screen">
     <app-hero></app-hero>
   </div>
   <!-- glow -->
   <div class="relative z-0">
     <div
-      class="pointer-events-none absolute -top-10 left-1/2 transform -translate-x-1/2 w-[80%] h-48 bg-gradient-to-r from-purple-500/30 via-purple-400/20 to-purple-500/30 blur-3xl rounded-full opacity-70 z-10"
+      class="pointer-events-none absolute -top-18 left-1/2 transform -translate-x-1/2 w-[90%] h-48 bg-gradient-to-r from-purple-500/30 via-purple-400/20 to-purple-500/30 blur-3xl rounded-full opacity-70"
     ></div>
   </div>
+  <!-- frameworks -->
+  <h1 class="text-4xl font-bold text-gray-100 mb-10 text-center">
+    Frameworks disponibles
+  </h1>
   <div
-    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-stretch mt-8 z-10"
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-stretch"
   >
-    <ng-container *ngFor="let item of frameworkList">
-      <app-circle-frame
-        [title]="item.name"
-        [icon]="item.logo"
-        [description]="item.description"
-      ></app-circle-frame>
-    </ng-container>
+    @for (item of frameworkList; track item.name) {
+
+    <app-circle-frame
+      [title]="item.name"
+      [icon]="item.logo"
+      [description]="item.description"
+    ></app-circle-frame>
+    }
+  </div>
+  <!-- popular snippets -->
+  <div class="mt-24">
+    <h2 class="text-4xl font-bold text-gray-100 mb-4 text-center">
+      Snippets Populares
+    </h2>
+
+    <div
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-2 items-stretch"
+    >
+      @for (item of popularSnippetList; track item.framework) {
+      <app-card-popular-snippet [item]="item"></app-card-popular-snippet>
+      }
+    </div>
   </div>
 </section>
