--- a/src/app/features/auth/form-login-register.html
+++ b/src/app/features/auth/form-login-register.html
@@ -1,138 +1,130 @@
-<div
-  class="min-h-screen flex items-center justify-center bg-gradient-to-br from-gray-50 to-gray-100"
->
+<div class="min-h-screen flex">
   <div
-    class="max-w-6xl w-full grid grid-cols-1 lg:grid-cols-2 gap-8 items-center px-4"
+    class="hidden lg:flex w-1/2 items-center justify-center bg-gradient-to-br from-indigo-50 to-blue-100 relative"
   >
-    <!-- form -->
     <div
-      class="bg-white py-6 px-10 rounded-2xl shadow-lg border border-gray-200 backdrop-blur-sm bg-opacity-90"
+      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-50"
+    ></div>
+    <div
+      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-25"
+    ></div>
+    <div
+      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-25"
+    ></div>
+    <div
+      class="relative z-10 w-full h-full flex items-center justify-center p-12"
     >
-      <div class="flex flex-col items-center">
-        <div class="flex items-center mb-2">
-          <svg
-            class="w-6 h-6 text-green-600"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M7.90451 6.92144C8.41341 6.45495 8.44779 5.66424 7.9813 5.15534C7.51481 4.64645 6.7241 4.61207 6.2152 5.07856L7.90451 6.92144ZM1.46194 11.1314L2.3066 12.0529L2.3066 12.0529L1.46194 11.1314ZM1.46194 11.8686L2.3066 10.9471L2.3066 10.9471L1.46194 11.8686ZM6.2152 17.9214C6.7241 18.3879 7.51481 18.3536 7.9813 17.8447C8.44779 17.3358 8.41341 16.545 7.90451 16.0786L6.2152 17.9214ZM6.2152 5.07856L0.617287 10.21L2.3066 12.0529L7.90451 6.92144L6.2152 5.07856ZM0.617287 12.79L6.2152 17.9214L7.90451 16.0786L2.3066 10.9471L0.617287 12.79ZM0.617287 10.21C-0.139356 10.9036 -0.139356 12.0964 0.617287 12.79L2.3066 10.9471C2.63087 11.2444 2.63087 11.7556 2.3066 12.0529L0.617287 10.21Z"
-              fill="currentColor"
-            />
-            <path
-              d="M16.0557 16.0786C15.5468 16.545 15.5125 17.3358 15.9789 17.8447C16.4454 18.3536 17.2361 18.3879 17.745 17.9214L16.0557 16.0786ZM22.4983 11.8686L21.6537 10.9471L21.6537 10.9471L22.4983 11.8686ZM22.4983 11.1314L21.6537 12.0529L21.6537 12.0529L22.4983 11.1314ZM17.745 5.07856C17.2361 4.61207 16.4454 4.64645 15.979 5.15534C15.5125 5.66424 15.5468 6.45495 16.0557 6.92144L17.745 5.07856ZM17.745 17.9214L23.343 12.79L21.6537 10.9471L16.0557 16.0786L17.745 17.9214ZM23.343 10.21L17.745 5.07856L16.0557 6.92144L21.6537 12.0529L23.343 10.21ZM23.343 12.79C24.0996 12.0964 24.0996 10.9036 23.343 10.21L21.6537 12.0529C21.3294 11.7556 21.3294 11.2444 21.6537 10.9471L23.343 12.79Z"
-              fill="currentColor"
-            />
-            <path
-              d="M15.2127 3.80317C15.3801 3.13343 14.9729 2.45476 14.3032 2.28732C13.6334 2.11989 12.9548 2.52709 12.7873 3.19683L15.2127 3.80317ZM8.78732 19.1968C8.61989 19.8666 9.02709 20.5452 9.69683 20.7127C10.3666 20.8801 11.0452 20.4729 11.2127 19.8032L8.78732 19.1968ZM12.7873 3.19683L8.78732 19.1968L11.2127 19.8032L15.2127 3.80317L12.7873 3.19683Z"
-              fill="currentColor"
-            />
-          </svg>
-          <span class="ml-2 text-xl font-bold text-gray-900">FastSnippets</span>
-        </div>
-        <h2 class="text-3xl font-semibold text-gray-800 mb-2">
-          {{ handle ? "Bienvenido de vuelta" : "Crea tu cuenta" }}
-        </h2>
-        <p class="text-gray-500 text-sm">
-          {{ handle ? "Ingresa tus credenciales" : "Comienza tu experiencia" }}
-        </p>
-      </div>
-
-      <form
-        [formGroup]="form"
-        (ngSubmit)="handle ? login() : signup()"
-        class="space-y-6"
-      >
-        <div class="space-y-2">
-          <label for="email" class="text-sm font-medium text-gray-600 block"
-            >Email</label
-          >
-          <div class="relative">
-            <div
-              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
-            >
-              <svg
-                class="h-5 w-5 text-gray-400"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
-                ></path>
-                <path
-                  d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
-                ></path>
-              </svg>
-            </div>
-            <input *ngFor="let input of inputList"
-              class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all duration-200"
-              type="input.ty"
-              formControlName="email"
-              name="email"
-              placeholder="tu@email.com"
-              required
-            />
-          </div>
-        </div>
-
-        <!-- validations -->
-        <div
-          class="validation-messages space-y-1"
-          *ngIf="form.get('email')?.touched"
-        >
-          <span
-            class="error-message text-xs text-red-600 font-medium"
-            *ngIf="form.get('email')?.errors?.['required']"
-          >
-            Email es requerido
-          </span>
-          <span
-            class="error-message text-xs text-red-600 font-medium"
-            *ngIf="form.get('email')?.errors?.['email']"
-          >
-            Por favor ingresa un email válido
-          </span>
-        </div>
-
-        <div
-          class="validation-messages space-y-1"
-          *ngIf="form.get('password')?.touched"
-        >
-          <span
-            class="error-message text-xs text-red-600 font-medium"
-            *ngIf="form.get('password')?.errors?.['required']"
-          >
-            Contraseña es requerida
-          </span>
-          <span
-            class="error-message text-xs text-red-600 font-medium"
-            *ngIf="form.get('password')?.errors?.['minlength']"
-          >
-            La contraseña debe tener al menos 6 caracteres
-          </span>
-        </div>
-
-        <button
-          type="submit"
-          class="w-full py-3 px-4 bg-gradient-to-r from-indigo-600 to-indigo-500 hover:from-indigo-700 hover:to-indigo-600 text-white font-medium rounded-lg shadow-md transition-all duration-200 transform hover:scale-[1.01] focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-opacity-50"
-        >
-          {{ handle ? "Iniciar sesión" : "Registrarse" }}
-        </button>
-
-        <div class="text-center text-sm text-gray-500 mt-4">
-          {{ handle ? "¿No tienes una cuenta?" : "¿Ya tienes una cuenta?" }}
-          <a
-            href="#"
-            class="text-indigo-600 hover:text-indigo-800 font-medium"
-            (click)="handle = !handle"
-          >
-            {{ handle ? "Regístrate" : "Inicia sesión" }}
-          </a>
-        </div>
-      </form>
+      <app-animation-login></app-animation-login>
     </div>
+  </div>
 
-    <app-animation-login></app-animation-login>
+  <!-- form -->
+  <div class="w-full lg:w-1/2 flex items-center justify-center bg-white">
+    <div class="w-full max-w-md">
+      <div class="p-10">
+        <div class="flex flex-col items-center">
+          <div class="mb-2">
+            <app-logo></app-logo>
+          </div>
+          <h2 class="text-3xl font-semibold text-gray-800 mb-2">
+            {{ handle ? "Bienvenido de vuelta" : "Crea tu cuenta" }}
+          </h2>
+          <p class="text-gray-500 text-sm">
+            {{
+              handle ? "Ingresa tus credenciales" : "Comienza tu experiencia"
+            }}
+          </p>
+        </div>
+
+        <form
+          [formGroup]="form"
+          (ngSubmit)="handle ? login() : signup()"
+          class="space-y-5"
+        >
+          <div *ngFor="let input of inputList">
+            <label
+              for="email"
+              class="text-sm font-medium text-gray-600 block mb-1"
+              >{{ input.label }}</label
+            >
+            <div class="relative">
+              <div
+                class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
+              >
+                <svg
+                  class="h-5 w-5 text-gray-400"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                >
+                  <path
+                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
+                  ></path>
+                  <path
+                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
+                  ></path>
+                </svg>
+              </div>
+              <input
+                class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all duration-200 placeholder:text-gray-400 text-sm"
+                type="{{ input.type }}"
+                formControlName="{{ input.label }}"
+                name="{{ input.name }}"
+                placeholder="{{ input.placeholder }}"
+                required
+              />
+            </div>
+          </div>
+
+          <!-- validations -->
+          <div class="" *ngIf="form.get('email')?.touched">
+            <span
+              class="text-xs text-red-600 font-medium"
+              *ngIf="form.get('email')?.errors?.['required']"
+            >
+              Email es requerido
+            </span>
+            <span
+              class="text-xs text-red-600 font-medium"
+              *ngIf="form.get('email')?.errors?.['email']"
+            >
+              Por favor ingresa un email válido
+            </span>
+          </div>
+
+          <div class="" *ngIf="form.get('password')?.touched">
+            <span
+              class="text-xs text-red-600 font-medium"
+              *ngIf="form.get('password')?.errors?.['required']"
+            >
+              Contraseña es requerida
+            </span>
+            <span
+              class="text-xs text-red-600 font-medium"
+              *ngIf="form.get('password')?.errors?.['minlength']"
+            >
+              La contraseña debe tener al menos 6 caracteres
+            </span>
+          </div>
+
+          <button
+            type="submit"
+            class="w-full py-3 px-4 bg-gradient-to-r from-indigo-600 to-indigo-500 hover:from-indigo-700 hover:to-indigo-600 text-white font-medium rounded-lg shadow-md transition-all duration-200 transform hover:scale-[1.01] focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-opacity-50"
+          >
+            {{ handle ? "Iniciar sesión" : "Registrarse" }}
+          </button>
+
+          <div class="text-center text-sm text-gray-500 mt-4">
+            {{ handle ? "¿No tienes una cuenta?" : "¿Ya tienes una cuenta?" }}
+            <a
+              href="#"
+              class="text-indigo-600 hover:text-indigo-800 font-medium"
+              (click)="handle = !handle"
+            >
+              {{ handle ? "Regístrate" : "Inicia sesión" }}
+            </a>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
