avanzanded demo of home, in footer abstance

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,5 @@
-<router-outlet />
+<main class="grid min-h-screen grid-rows-[auto_1fr_auto]">
+  <app-header></app-header>
+  <router-outlet />
+  <app-footer></app-footer>
+</main>
