--- a/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
+++ b/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
@@ -21,8 +21,8 @@
         (click)="copyCode(item.code)"
         class="absolute right-2 top-1/2 -translate-y-1/2 cursor-pointer w-8 h-8 flex items-center justify-center"
       >
+        @if (!copied) {
         <svg
-          *ngIf="!copied"
           class="w-6 h-6 text-gray-800"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
@@ -38,13 +38,15 @@
             d="M9 8v3a1 1 0 0 1-1 1H5m11 4h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-7a1 1 0 0 0-1 1v1m4 3v10a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1v-7.13a1 1 0 0 1 .24-.65L7.7 8.35A1 1 0 0 1 8.46 8H13a1 1 0 0 1 1 1Z"
           />
         </svg>
+        } @else {
         <video
-          src="check.mp4"
-          *ngIf="copied"
+          src="/check.mp4"
           class="w-7 h-7"
           autoplay
           muted
+          playsinline
         ></video>
+        }
       </button>
     </div>
     <div>
