--- a/src/app/features/home/components/hero/hero.html
+++ b/src/app/features/home/components/hero/hero.html
@@ -1,6 +1,6 @@
-    <section class="hero-gradient flex justify-center items-center  text-center">
+    <section class="flex justify-center items-center text-center">
       <div class="max-w-4xl mx-auto">
-        <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-6 text-gray-200 ">
+        <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-6 text-gray-200 ">
           Acelera tu desarrollo con <span class="text-purple-600 whitespace-nowrap">snippets útiles</span>
         </h1>
         <p class="text-xl text-gray-200 mb-8 max-w-2xl mx-auto">
