--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -25,7 +25,7 @@
       ></app-circle-frame>
       }
     </div>
-    <!-- popular snippets -->
+    <!-- popular snippet -->
     <div class="mt-24">
       <h2 class="text-4xl font-bold text-gray-100 mb-4 text-center">
         Snippets Populares
