--- a/src/app/features/auth/form-login-register.html
+++ b/src/app/features/auth/form-login-register.html
@@ -1,16 +1,5 @@
-<div class="min-h-screen flex">
-  <div
-    class="hidden lg:flex w-1/2 items-center justify-center bg-gradient-to-br from-indigo-50 to-blue-100 relative"
-  >
-    <div
-      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-50"
-    ></div>
-    <div
-      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-25"
-    ></div>
-    <div
-      class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-indigo-50 to-blue-100 opacity-25"
-    ></div>
+<div class="flex">
+  <div class="hidden lg:flex w-1/2 items-center justify-center relative">
     <div
       class="relative z-10 w-full h-full flex items-center justify-center p-12"
     >
@@ -19,17 +8,14 @@
   </div>
 
   <!-- form -->
-  <div class="w-full lg:w-1/2 flex items-center justify-center bg-white">
+  <div class="w-full lg:w-1/2 flex items-center justify-center">
     <div class="w-full max-w-md">
       <div class="p-10">
         <div class="flex flex-col items-center">
-          <div class="mb-2">
-            <app-logo></app-logo>
-          </div>
-          <h2 class="text-3xl font-semibold text-gray-800 mb-2">
+          <h2 class="text-3xl font-semibold text-gray-100 mb-2">
             {{ handle ? "Bienvenido de vuelta" : "Crea tu cuenta" }}
           </h2>
-          <p class="text-gray-500 text-sm">
+          <p class="text-gray-400 text-sm">
             {{
               handle ? "Ingresa tus credenciales" : "Comienza tu experiencia"
             }}
@@ -108,7 +94,7 @@
 
           <button
             type="submit"
-            class="w-full py-3 px-4 bg-gradient-to-r from-indigo-600 to-indigo-500 hover:from-indigo-700 hover:to-indigo-600 text-white font-medium rounded-lg shadow-md transition-all duration-200 transform hover:scale-[1.01] focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-opacity-50"
+            class="w-full py-3 px-4 bg-purple-600 hover:bg-purple-700 text-white font-medium rounded-lg shadow-md transition-all duration-200 transform hover:scale-[1.01] focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:ring-opacity-50"
           >
             {{ handle ? "Iniciar sesión" : "Registrarse" }}
           </button>
@@ -117,7 +103,7 @@
             {{ handle ? "¿No tienes una cuenta?" : "¿Ya tienes una cuenta?" }}
             <a
               href="#"
-              class="text-indigo-600 hover:text-indigo-800 font-medium"
+              class="text-purple-600 hover:text-purple-800 font-medium"
               (click)="handle = !handle"
             >
               {{ handle ? "Regístrate" : "Inicia sesión" }}
