--- a/src/app/shared/components/logo/logo.html
+++ b/src/app/shared/components/logo/logo.html
@@ -1,6 +1,6 @@
 <div class="flex items-center">
   <svg
-    class="w-6 h-6 text-green-600"
+    class="w-6 h-6 text-purple-600"
     viewBox="0 0 24 24"
     fill="none"
     xmlns="http://www.w3.org/2000/svg"
@@ -18,5 +18,5 @@
       fill="currentColor"
     />
   </svg>
-  <span class="ml-2 text-xl font-bold text-gray-900">FastSnippets</span>
+  <span class="ml-2 text-xl font-bold text-white">FastSnippets</span>
 </div>
