--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 body {
-  background-color: #f8f9fa;
+  background-color: #18181b;
   font-family: "Poppins", sans-serif;
 }
