details in app, login, card...etc

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -66,7 +66,7 @@
       <app-box-about [item]="item"></app-box-about>
       }
     </div>
-    <div class="mt-20">
+    <div class="mt-20 mb-20">
       <app-cta></app-cta>
     </div>
   </div>
