--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
 <main class="grid min-h-screen grid-rows-[auto_1fr_auto]">
   <app-header></app-header>
   <router-outlet />
+  @if (!isLoginRoute) {
   <app-footer></app-footer>
+  }
 </main>
