--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -1,1 +1,66 @@
-<p>footer works!</p>
+<footer class="relative overflow-hidden bg-purple-600/20 text-white pt-14 pb-8 px-6">
+  <!-- glow background -->
+  <div class="absolute -inset-40 opacity-60 pointer-events-none z-0">
+    <div
+      class="absolute top-1/4 left-1/3 w-96 h-96 bg-purple-500/40 rounded-full blur-3xl"
+    ></div>
+    <div
+      class="absolute bottom-0 right-1/4 w-80 h-80 bg-purple-700/30 rounded-full blur-3xl"
+    ></div>
+    <div
+      class="absolute top-0 right-0 w-72 h-72 bg-purple-600/20 rounded-full blur-3xl"
+    ></div>
+  </div>
+
+  <!-- whites glows-->
+  <div
+    class="absolute top-10 left-10 w-40 h-40 bg-white rounded-full opacity-10 blur-2xl pointer-events-none z-0"
+  ></div>
+  <div
+    class="absolute bottom-1/4 right-16 w-28 h-28 bg-white rounded-full opacity-5 blur-xl pointer-events-none z-0"
+  ></div>
+  <div
+    class="absolute top-1/2 left-1/2 w-24 h-24 bg-white rounded-full opacity-5 blur-lg pointer-events-none z-0"
+  ></div>
+
+  <!-- content -->
+  <div
+    class="relative z-10 max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8"
+  >
+    <div
+      class="flex flex-col items-center sm:items-start text-center sm:text-left"
+    >
+      <app-logo></app-logo>
+      <p class="mt-3 text-gray-300 text-sm max-w-xs">
+        La mejor manera de aprender es con el ejemplo
+      </p>
+    </div>
+
+    <!-- links -->
+    @for (section of footerSections; track $index) {
+
+    <div class="flex flex-col items-center sm:items-start">
+      <span class="font-semibold text-white mb-2 text-lg">{{
+        section.title
+      }}</span>
+      @for (link of section.links; track $index) {
+
+      <a
+        [href]="link.url"
+        target="_blank"
+        class="text-gray-400 hover:text-white transition-colors duration-200 text-sm"
+      >
+        {{ link.label }}
+      </a>
+      }
+    </div>
+    }
+  </div>
+
+  <!-- footer-->
+  <div
+    class="relative z-10 border-t border-gray-200 mt-10 pt-6 text-center text-xs text-gray-500"
+  >
+    © {{ currentYear }} FastSnippets. Todos los derechos reservados.
+  </div>
+</footer>
