--- a/src/app/features/auth/form-login-register.html
+++ b/src/app/features/auth/form-login-register.html
@@ -1,4 +1,4 @@
-<div class="min-h-[90vh] flex">
+<div class="min-h-[90vh] lg:min-h-[92vh] flex">
   <div class="w-full lg:w-1/2 flex items-center justify-center">
     <div class="w-full max-w-md">
       <div class="p-10">
@@ -49,7 +49,7 @@
                   </svg>
                 </div>
                 <input
-                  class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-lg  placeholder:text-gray-400 text-sm text-white"
+                  class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-lg placeholder:text-gray-400 text-sm text-white"
                   type="{{ input.type }}"
                   [formControlName]="input.label"
                   name="{{ input.name }}"
@@ -62,15 +62,21 @@
           </div>
 
           <!-- validations -->
-          @if (form.get(input.label)?.touched) {
-            @for (validator of input.validators; track validator.type) {
-              @if (form.get(input.label)?.errors?.[validator.type]) {
-                <span class="text-xs text-red-600 font-medium">
-                  {{ validator.message }}
-                </span>
-              }
-            }
-          }
+          @if (form.get(input.label)?.touched) { @for (validator of
+          input.validators; track validator.type) { @if
+          (form.get(input.label)?.errors?.[validator.type]) {
+          <span class="text-xs text-red-600 font-medium">
+            {{ validator.message }}
+          </span>
+          } } } }
+
+          <!-- Error message -->
+          @if (errorMessage) {
+          <div
+            class="mt-3 p-3 bg-red-100 border border-red-400 text-red-700 rounded-lg text-sm"
+          >
+            {{ errorMessage }}
+          </div>
           }
 
           <button
