--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -14,6 +14,7 @@
       Frameworks disponibles
     </h1>
     <div
+      id="popularSnippet"
       class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-stretch"
     >
       @for (item of frameworkList; track item.name) {
