--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -1,1 +1,5 @@
-<p>snippets works!</p>
+<div class="m-6 mt-36 mx-36">
+  <div class="flex flex-col space-y-2 min-h-[90vh]">
+    <app-filters></app-filters>
+  </div>
+</div>
