--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #18181b;
   font-family: "Poppins", sans-serif;
