--- a/src/app/features/snippets/components/filters/filters.html
+++ b/src/app/features/snippets/components/filters/filters.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col space-y-4">
   <div class="relative">
     <input
-      class="px-10 py-3 text-white w-full bg-neutral-700 rounded-lg"
+      class="px-10 py-4 text-white w-full bg-[#18181b] rounded-lg outline-none"
       type="text"
       placeholder="Buscar snippet por titulo, tag o framework..."
     />
