--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -1,5 +1,34 @@
 <div class="m-6 mt-36 mx-36">
   <div class="flex flex-col space-y-2 min-h-[90vh]">
-    <app-filters></app-filters>
+    <app-filters
+      [selectedFramework]="selectedFramework"
+      (frameworkSelected)="onFrameworkFilter($event)"
+    >
+    </app-filters>
+    <div>
+      <p class="text-xl text-white mt-4">
+        {{ AuxSnippetList.length }} snippets disponibles
+      </p>
+    </div>
+    @if (AuxSnippetList.length > 0) {
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
+      @for (item of AuxSnippetList; track item.code) {
+      <app-box-snippet
+        [snippet]="item"
+        (favourite)="favouriteSnippet($event)"
+      ></app-box-snippet>
+      }
+    </div>
+    } @else if (isLoading) {
+    <div class="flex justify-center items-center h-64">
+      <p class="text-gray-500 text-lg">Cargando snippets...</p>
+    </div>
+    } @else {
+    <div class="flex justify-center items-center h-64">
+      <p class="text-gray-500 text-lg">
+        No hay snippets para el framework "{{ selectedFramework }}"
+      </p>
+    </div>
+    }
   </div>
 </div>
