Add title property to Snippet interface; implement search functionality in snippets component; update filters to support search input; display snippet title in box-snippet component; initialize title in create-snippet component.

--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -3,6 +3,7 @@
     <app-filters
       [selectedFramework]="selectedFramework"
       (frameworkSelected)="onFrameworkFilter($event)"
+      (search)="onSearch($event)"
     >
     </app-filters>
     <div>
