--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -42,6 +42,9 @@
       </svg>
     </button>
   </header>
+  <div>
+    <p class="text-xl font-semibold text-gray-100">{{ snippet.title }}</p>
+  </div>
 
   <!-- code -->
   <div class="p-3 relative bg-white rounded-lg overflow-x-auto">
