Implement modal functionality for snippet details; update copy button to handle single code string; enhance styles for no-scroll behavior.

--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -17,6 +17,7 @@
       <app-box-snippet
         [snippet]="item"
         (favourite)="favouriteSnippet($event)"
+        (showModal)="openModal($event)"
       ></app-box-snippet>
       }
     </div>
@@ -32,4 +33,11 @@
     </div>
     }
   </div>
+
+  @if (showModal) {
+  <app-modal-snippet
+    [snippet]="selectedSnippet"
+    (disabledModal)="closeModal()"
+  ></app-modal-snippet>
+  }
 </div>
