--- a/src/app/shared/components/copy-button/copy-button.html
+++ b/src/app/shared/components/copy-button/copy-button.html
@@ -1,10 +1,10 @@
 <button
-  (click)="copyCode(code[0])"
+  (click)="copyCode(code)"
   class="absolute right-1 top-6 -translate-y-1/2 cursor-pointer w-8 h-8 flex items-center justify-center"
 >
   @if (!copied) {
   <svg
-    class="w-6 h-6 text-gray-800"
+    class="w-6 h-6 text-gray-950"
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
     width="24"
