--- a/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
+++ b/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
@@ -17,7 +17,7 @@
       class="relative flex flex-col px-4 py-3 rounded mb-2 bg-white transition-all duration-50"
     >
       <code class="font-mono text-sm text-gray-800">{{ item.code }}</code>
-      <app-copy-button [code]="item.code"></app-copy-button>
+      <app-copy-button [code]="item.code[0]"></app-copy-button>
     </div>
     <div>
       <span class="text-sm text-gray-100">{{ item.actions[0] }}</span>
