--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -53,7 +53,7 @@
     } @else {
     <pre><code class="bg-gray-100 text-black">No hay código disponible</code></pre>
     }
-    <app-copy-button [code]="snippet.code"></app-copy-button>
+    <app-copy-button [code]="snippet.code[0]"></app-copy-button>
   </div>
 
   <!-- actions -->
@@ -63,5 +63,39 @@
     } @else {
     <p class="text-sm text-gray-400 italic">No hay descripción disponible</p>
     }
+  </div>
+
+  <!-- button -->
+  <div
+    (click)="openModal()"
+    class="flex justify-between items-center border-1 border-gray-500 rounded-lg transition-colors duration-200 cursor-pointer"
+    [ngClass]="{
+      'hover:bg-red-500': snippet.framework === 'Angular',
+      'hover:bg-[#00d8ff]': snippet.framework === 'React',
+      'hover:bg-green-600': snippet.framework === 'Vue',
+      'hover:bg-orange-600': snippet.framework === 'Svelte'
+    }"
+  >
+    <button class="mx-auto text-white px-4 py-2 rounded-lg cursor-pointer">
+      <span class="text-sm">Ver más</span>
+    </button>
+    <svg
+      class="w-6 h-6 mr-2 text-gray-800 dark:text-white"
+      width="24"
+      height="24"
+      fill="none"
+      viewBox="0 0 24 24"
+    >
+      <path
+        stroke="currentColor"
+        stroke-width="2"
+        d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"
+      />
+      <path
+        stroke="currentColor"
+        stroke-width="2"
+        d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+      />
+    </svg>
   </div>
 </article>
