--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -15,6 +15,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
       @for (item of AuxSnippetList; track item.code) {
       <app-box-snippet
+        [isFavourite]="detectIfUserSavedSnippet(item)"
         [snippet]="item"
         (favourite)="favouriteSnippet($event)"
         (showModal)="openModal($event)"
