--- a/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
+++ b/src/app/features/home/components/card-popular-snippet/card-popular-snippet.html
@@ -1,26 +1,45 @@
-<article class="relative flex flex-col space-y-2 p-4 rounded-md">
+<article class="relative flex flex-col p-4 rounded-md overflow-hidden">
   <!-- glow background -->
-  <div class="absolute -inset-4 opacity-60 pointer-events-none z-0">
+  <div class="absolute inset-0 opacity-60 pointer-events-none z-0">
     <div class="absolute inset-0 bg-purple-500/30 rounded-full blur-3xl"></div>
     <div
       class="absolute top-0 left-1/4 w-1/2 h-1/2 bg-indigo-600/20 rounded-full blur-2xl"
     ></div>
   </div>
-  <div class="">
-    <header class="flex items-center gap-2 mb-2">
-      <img [src]="item.icon" alt="item.framework" class="w-10 h-10" />
-      <span class="text-lg font-medium text-gray-100">
+
+  <div class="relative z-10">
+    <!-- header -->
+    <header class="flex items-center gap-2 mb-3">
+      <img
+        [src]="item.icon"
+        alt="item.framework"
+        class="w-10 h-10 flex-shrink-0"
+      />
+      <span class="text-base sm:text-lg font-medium text-gray-100">
         {{ item.framework }}
       </span>
     </header>
+
+    <!-- code box -->
     <div
-      class="relative flex flex-col px-4 py-3 rounded mb-2 bg-white transition-all duration-50"
+      class="relative flex items-start justify-between gap-3 px-4 p-3 rounded mb-3 bg-white shadow-sm"
     >
-      <code class="font-mono text-sm text-gray-800">{{ item.code }}</code>
-      <app-copy-button [code]="item.code[0]"></app-copy-button>
+      <div class="overflow-x-auto max-w-full">
+        <code
+          class="text-purple-600 font-mono text-xs sm:text-sm md:text-base"
+          [innerHTML]="item.code[0] | highlight"
+        ></code>
+      </div>
+      <div class="flex-shrink-0">
+        <app-copy-button [code]="item.code[0]" [black]="true"></app-copy-button>
+      </div>
     </div>
+
+    <!-- footer text -->
     <div>
-      <span class="text-sm text-gray-100">{{ item.actions[0] }}</span>
+      <span class="text-xs sm:text-sm text-gray-100">
+        {{ item.actions[0] }}
+      </span>
     </div>
   </div>
 </article>
