changes of scroll and poco mas

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -40,7 +40,8 @@
         }
       </div>
       <button
-        class="flex items-center justify-center mt-2 mb-22 w-full cursor-pointer"
+        routerLink="/snippets"
+        class="flex items-center justify-center mt-6 mb-22 w-full cursor-pointer"
       >
         <span class="text-white hover:underline">Ver más snippets </span>
         <svg
