--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -24,7 +24,7 @@
         class="w-6 h-6 duration-200 transition-all"
         [ngClass]="{
           'text-red-500': isFavourite,
-          'text-gray-400': !isFavourite
+          'text-white': !isFavourite
         }"
         aria-hidden="true"
         width="24"
