add snippets fav feature

--- a/src/app/features/home/components/cta/cta.html
+++ b/src/app/features/home/components/cta/cta.html
@@ -1,6 +1,6 @@
 <section>
   <div
-    class="relative overflow-hidden flex flex-col backdrop-blur-sm rounded-lg bg-purple-600/10  transition-colors duration-50 shadow-sm hover:shadow-md p-6 cursor-pointer"
+    class="relative overflow-hidden flex flex-col backdrop-blur-sm rounded-lg   transition-colors duration-50 shadow-sm hover:shadow-md p-6 cursor-pointer"
   >
     <!-- glow background -->
     <div class="absolute -inset-20 opacity-60 pointer-events-none z-0">
