--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -21,7 +21,7 @@
     </div>
     <button (click)="emitFavourite(snippet)">
       <svg
-        class="w-6 h-6 duration-200 transition-all"
+        class="w-6 h-6 duration-200 transition-all cursor-pointer"
         [ngClass]="{
           'text-red-500': isFavourite,
           'text-white': !isFavourite
