add avatar with menu when is logged in

--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -3,8 +3,19 @@
     <div class="cursor-pointer" (click)="backToHome()">
       <app-logo></app-logo>
     </div>
-    <div class="cursor-pointer">
-      <a class="text-white font-semibold border p-2 hover:p-3 transition-all duration-200 shadow-md hover:shadow-lg shadow-purple-500" (click)="navigateToCreateSnippet()">Explorar</a>
+    <div class="flex items-center cursor-pointer gap-8">
+      <a
+        class="text-white font-semibold border p-2 hover:px-3 transition-all duration-200 shadow-md hover:shadow-lg shadow-purple-500"
+        (click)="navigateToCreateSnippet()"
+        >Explorar</a
+      >
+      @if (isLoggedIn) {
+      <a
+        class="text-white font-semibold border p-2 hover:px-3 transition-all duration-200 shadow-md hover:shadow-lg shadow-purple-500"
+        (click)="navigateToFavSnippets()"
+        >Mis favoritos</a
+      >
+      }
     </div>
 
     <div class="flex items-center gap-6">
@@ -20,6 +31,7 @@
       </button>
 
       <!-- Create Snippet -->
+      @if (!isLoggedIn) {
       <button
         (click)="navigateToCreateSnippet()"
         class="group relative flex cursor-pointer items-center justify-center w-10 h-10 rounded-full bg-purple-600 transition-colors"
@@ -55,6 +67,9 @@
           />
         </svg>
       </button>
+      } @if (isLoggedIn) {
+      <app-button-avatar-header> </app-button-avatar-header>
+      }
     </div>
   </nav>
 </section>
