--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -1,5 +1,5 @@
 <article
-  class="p-4 space-y-3 mb-3 flex flex-col bg-[#18181b] rounded-lg hover:shadow-sm hover:shadow-purple-100 transition-shadow duration-200 break-inside-avoid"
+  class="p-4 space-y-3 mb-3 flex flex-col bg-[#18181b] rounded-lg hover:shadow-sm hover:shadow-gray-100 transition-shadow duration-200 break-inside-avoid"
 >
   <!-- header -> icon + framework + favourite -->
   <header class="flex items-center justify-between">
@@ -57,9 +57,9 @@
   </div>
 
   <!-- code -->
-  <div class="p-3 relative bg-white rounded-lg overflow-x-auto max-w-full">
+  <div class="p-3 relative bg-[#121212] rounded-lg overflow-x-auto max-w-full">
     @if (snippet.code && snippet.code.length > 0) {
-    <pre class="min-w-0"><code class="text-purple-600 font-mono text-xl md:text-sm lg:text-base whitespace-pre-wrap" [innerHTML]="snippet.code[0] | highlight"></code></pre>
+    <pre><code class="text-purple-600 font-mono text-xl md:text-sm lg:text-base whitespace-pre-wrap" [innerHTML]="snippet.code[0] |  highlight:'typescript'"></code></pre>
     } @else {
     <pre><code class="bg-gray-100 text-black">No hay código disponible</code></pre>
     }
