--- a/src/app/shared/components/button-avatar-header/button-avatar-header.html
+++ b/src/app/shared/components/button-avatar-header/button-avatar-header.html
@@ -30,7 +30,7 @@
         </svg>
 
         <a
-          href=""
+          (click)="link.action()"
           class="absolute group-hover:font-semibold group-hover:text-[15px] transition-all duration-200 text-sm px-8"
           >{{ link.name }}</a
         >
