--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import 'highlight.js/styles/github.css';
+@import 'highlight.js/styles/arduino-light.min.css';
 html {
   scroll-behavior: smooth;
 }
