--- a/src/app/shared/components/button-avatar-header/button-avatar-header.html
+++ b/src/app/shared/components/button-avatar-header/button-avatar-header.html
@@ -13,7 +13,7 @@
     <div class="flex flex-col items-center">
       @for (link of links; track link.name) {
       <div
-        class="relative border-b border-white hover:border-0 w-full text-white px-2 py-4 gap-2 flex items-center group"
+        class="relative border-b cursor-pointer border-white hover:border-0 w-full text-white px-2 py-4 gap-2 flex items-center group"
       >
         <svg
           class="w-6 h-6 text-gray-800 dark:text-white"
