Update styles for home and box-snippet components: adjust gradient opacity in home.html and remove highlight class in box-snippet.html.

--- a/src/app/features/snippets/components/box-snippet/box-snippet.html
+++ b/src/app/features/snippets/components/box-snippet/box-snippet.html
@@ -60,7 +60,7 @@
   <div class="p-3 relative bg-[#212026] rounded-lg overflow-x-auto max-w-full">
     @if (snippet.code && snippet.code.length > 0) {
     <pre>
-<code class="hljs font-mono whitespace-pre-wrap" [highlight]="snippet.code[0]" [language]="'typescript'"></code>
+<code class="font-mono whitespace-pre-wrap" [highlight]="snippet.code[0]" [language]="'typescript'"></code>
 </pre>
     } @else {
     <pre><code class="bg-gray-100 text-black">No hay código disponible</code></pre>
